@@ -6,6 +6,7 @@ compatibility with earlier versions of difx2fits and maybe difx2mark4.
 * Tcal requests will now return values outside sampled range, but will cause warning at end of processing.
 * Support RX NAME parameter in FREQ table
 * Experimental support for TLE spacecraft ephemerides
+* Some segfault protecting in model writing (CJP+WFB)
 
 3.1.0
 * Rename from 3.0.2 prior to DiFX-2.1
